--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -3,4 +3,4 @@ cursor-color = white
 cursor-style = bar
 font-family = "CaskaydiaMono Nerd Font"
 shell-integration = zsh
-theme = "rose-pine-moon"
+theme = Rose Pine Moon
