--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,6 +23,12 @@ exec-once = waybar
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+# NVIDIA support
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = NVD_BACKEND,direct
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
+
 #####################
 ### LOOK AND FEEL ###
 #####################
