--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -138,7 +138,7 @@ device {
 ###################
 
 $browser = firefox
-$explorer = nautilus --new-window
+$explorer = nautilus --new-window --no-desktop
 $launcher = rofi -show drun
 $mod = SUPER
 $screenshot = grim -g "$(slurp)"
